[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
primes = "0.3.0"
serde = "1.0.152"
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
